# standalorm

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  modules.rst  requirements.txt
src/django_orm/: __init__.py  cli.py  db_makers.py  orm-settings.toml  orm_init.py  settings.py  utils.py
src/standalorm/: cli.py  db_makers.py  orm-settings.toml  orm_init.py  settings.py  utils.py
